fix config server yml
